  * dh_pypy: fix dpkg search template to find more pypy egg-info packages
  * dh_py*:
    - add interpreter to Depends if .so file is detected in private dir
      only if python{,3,all,3-all}-dev is in Build-Depends (closes: 811083)
    - use Build-Depends' minimum version for required libraries if other
      methods to detect it failed (closes: 791433)

  [ Ondřej Nový ]
  * When depends on python{3,}-setuptools-scm, set
    SETUPTOOLS_SCM_PRETEND_VERSION to upstream version
  * Standards-Version is 3.9.8 now (no changes needed)
  * Changed Vcs-* URLs to https protocol

  [ James Page ]
  * dhpython/pydist.py: Ensure that != dependency versions are ignored
    (LP: #1581065).

 -- Piotr Ożarowski <piotr@debian.org>  Thu, 18 Feb 2016 21:08:04 +0100

dh-python (2.20151103) unstable; urgency=medium

  * dh_py*:
    - remove lines from requires.txt already translated into Debian
      dependencies
    - remove SOURCES.txt from egg-info directories (closes: 802882)
  * dh_pypy: generate pypy-abi-foo dependencies for PyPy extensions
    (closes: 803689)
  * pybuild:
    - build default interpreter version last (in case previous build
      results are overwritten, like in distutils build system)
    - remove (just before install stage) egg-info dirs generated in build_dir
      during test stage (closes: 803242)
  * Move libdpkg-perl from Depends to Suggests. python3 still depends on
    dh-python and we don't want to pull Perl when python3 is intalled
    (libdpkg-perl is pulled in by debhelper anyway) 
  * Add README.rst file

 -- Piotr Ożarowski <piotr@debian.org>  Tue, 03 Nov 2015 23:20:36 +0100

dh-python (2.20150826) unstable; urgency=medium

  * Remove '--with-doctest' from nose call, closes: 749506
    to re-enable it: export PYBUILD_TEST_ARGS=--with-doctest
  * Build-Depends based test suite detection is used only if PYBUILD_TEST_FOO
    is not set to 1
  * dh_python2: do not try to move files to pyshared if package doesn't